--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/8dfb506116.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,600;0,700;0,800;0,900;1,600;1,700;1,800&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&family=Rubik:ital,wght@0,300;0,400;0,500;1,300;1,400&family=Work+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/style.css">
     <title>World Cup Football</title>
 
 </head>
@@ -47,7 +47,7 @@
             <div class="container">
                 <div class="match-content">
                     <div class="content-left">
-                        <a class="btn-primary-white" href="#">Upcoming Match</a>
+                        <a class="btn-primary-white" target="_blank" href="matches.html">Upcoming Match</a>
                         <a class="btn-primary-white" href="#">All Group</a>
                         <a class="btn-primary" href="#">Blog</a>
                     </div>
