--- a/matches.html
+++ b/matches.html
@@ -173,6 +173,13 @@
             <li><a href="#">Goal App</a></li>
             <li><a href="#">Goal Live</a></li>
         </ul>
+        <div class="social-icon">
+            <span>Follow Us on :</span>
+            <a class="fonts" target="_blank" href="https://www.facebook.com/walid.hossain.9028"><i class="fa-brands fa-facebook-square"></i></a>
+            <a class="fonts" target="_blank" href="https://www.linkedin.com/in/delowar-hossain-walid-119933216/"><i class="fa-brands fa-linkedin"></i></a>
+            <a class="fonts" target="_blank" href="https://twitter.com/DelowarW"><i class="fa-brands fa-twitter"></i></a>
+            <a class="fonts" target="_blank" href="https://www.instagram.com/walid.hossain.9028/"><i class="fa-brands fa-instagram"></i></a>
+        </div>
     </footer>
     <!---------------------- 
             Footer section start
