--- a/matches.html
+++ b/matches.html
@@ -49,10 +49,10 @@
                     <div class="content-left">
                         <a class="btn-primary-white" href="upcoming.html">Upcoming Match</a>
                         <a class="btn-primary-white" href="#">All Group</a>
-                        <a class="btn-primary" href="#">Blog</a>
+                        <a class="btn-primary" href="#blog">Blog</a>
                     </div>
 
-                    <div class="content-right">
+                    <div id="blog" class="content-right">
                         
                         <div class="blogs">
                             <div class="blog-content">
