--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                     <div class="content-left">
                         <a class="btn-primary-white" target="_blank" href="matches.html">Upcoming Match</a>
                         <a class="btn-primary-white" href="#">All Group</a>
-                        <a class="btn-primary" href="#">Blog</a>
+                        <a class="btn-primary" href="#blog">Blog</a>
                     </div>
 
-                    <div class="content-right">
+                    <div id="blog" class="content-right">
                         <div class="blogs">
                             <div class="content-thumbnail">
                                 <img src="images/assets/Blog Image.png" alt="">
