--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <a class="btn-primary" href="#">Watch Live <span><i class="fa-regular fa-circle-right"></i></span></a>
                     </div>
                     <div class="banner-img">
-                        <img src="images/assets/Banner Image.png" alt="">
+                        <img id="innerimage" src="images/assets/Banner Image.png" alt="">
                     </div>
                 </div>
             </div>
